--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "googleapis": "^144.0.0",
+    "imagekit": "^5.2.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
